<?xml version="1.0"?>
<package format="2">
    <name>wavemap_2d_ros</name>
    <version>0.0.0</version>
    <description>ROS interface for wavemap_2d.</description>

    <maintainer email="victorr@ethz.ch">Victor Reijgwart</maintainer>
    <license>BSD</license>
    <url>https://github.com/victorreijgwart/wavemap_2d</url>

    <author email="victorr@ethz.ch">Victor Reijgwart</author>

    <buildtool_depend>catkin</buildtool_depend>
    <buildtool_depend>catkin_simple</buildtool_depend>

    <depend>roscpp</depend>
    <depend>glog_catkin</depend>
    <depend>eigen_catkin</depend>

    <depend>wavemap_2d</depend>

    <depend>minkindr</depend>
    <depend>minkindr_conversions</depend>
    <depend>pcl_ros</depend>
    <depend>pcl_conversions</depend>

    <depend>sensor_msgs</depend>
    <depend>wavemap_2d_msgs</depend>
</package>
