<?xml version="1.0"?>
<package format="2">
  <name>wavemap_2d</name>
  <version>0.0.0</version>
  <description>Library for 2D mapping using wavemap.</description>

  <maintainer email="victorr@ethz.ch">Victor Reijgwart</maintainer>
  <license>BSD</license>
  <url>https://github.com/victorreijgwart/wavemap</url>

  <author email="victorr@ethz.ch">Victor Reijgwart</author>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>glog_catkin</depend>
  <depend>eigen_catkin</depend>
  <depend>minkindr</depend>
  <depend>opencv3_catkin</depend>

  <depend>wavemap_common</depend>
</package>
