<?xml version="1.0"?>
<package format="2">
  <name>wavemap_3d</name>
  <version>0.0.0</version>
  <description>Library for 3D mapping using wavemap.</description>

  <maintainer email="victorr@ethz.ch">Victor Reijgwart</maintainer>
  <license>BSD</license>
  <url>https://github.com/victorreijgwart/wavemap</url>

  <author email="victorr@ethz.ch">Victor Reijgwart</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>wavemap_common</depend>

  <test_depend>gtest</test_depend>
</package>
