<?xml version="1.0"?>
<package format="2">
  <name>wavemap_io</name>
  <version>1.6.0</version>
  <description>(De)serialization of wavemap types to files.</description>

  <maintainer email="victorr@ethz.ch">Victor Reijgwart</maintainer>
  <license>BSD</license>
  <url>https://github.com/victorreijgwart/wavemap</url>

  <author email="victorr@ethz.ch">Victor Reijgwart</author>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>wavemap</depend>

  <test_depend>gtest</test_depend>
</package>
