<?xml version="1.0"?>
<package format="2">
  <name>wavemap_2d_ros</name>
  <version>0.0.0</version>
  <description>ROS interface for wavemap_2d.</description>

  <maintainer email="victorr@ethz.ch">Victor Reijgwart</maintainer>
  <license>BSD</license>
  <url>https://github.com/victorreijgwart/wavemap</url>

  <author email="victorr@ethz.ch">Victor Reijgwart</author>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>wavemap_2d</depend>

  <depend>roscpp</depend>
  <depend>rosbag</depend>

  <depend>minkindr_conversions</depend>
  <depend>std_srvs</depend>
  <depend>sensor_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>wavemap_msgs</depend>
</package>
